--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,9 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   background: linear-gradient(
       to bottom,
       transparent,
